--- a/assets/css/MyStyle.css
+++ b/assets/css/MyStyle.css
@@ -1,6 +1,17 @@
+html  {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 #testimonials {
     background-color: lightgrey;
     font: white;
+}
+#navbar {
+    max-width: 100%;
 }
 
 body {
