--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,26 +5,23 @@ body,
   height: 100%;
   width: 100% }
 
-/* Full Page Carousel itself*/
-.carousel {
-  height: 100%; }
-  .carousel .carousel-inner {
-    height: 100%; }
-    .carousel .carousel-inner .carousel-item,
-    .carousel .carousel-inner .active {
-      height: 100%; }
-
 /* Navbar animation */
 .navbar {
-  background-color: rgba(0, 0, 0, 0.2); }
+  background-color: rgba(0, 0, 0, 0.2);
+  max-width: 100%;
+}
 
 .top-nav-collapse {
-  background-color: #1C2331; }
+  background-color: #1C2331;
+  max-width: 100%;
+}
 
 /* Adding color to the Navbar on mobile */
 @media only screen and (max-width: 768px) {
   .navbar {
-    background-color: #1C2331; } }
+    background-color: #1C2331; 
+    max-width: 100%;
+  } }
 
 /* Footer color for sake of consistency with Navbar */
 .page-footer {
